@@ -2,7 +2,8 @@ name          := "spark-scala-tutorial"
 organization  := "com.lightbend"
 description   := "Spark Scala Tutorial"
 version       := "6.0.0"
-scalaVersion  := "2.11.8"
+// MIGRATION: Updated Scala version from 2.11.8 to 2.12.15 for Spark 3.0 compatibility
+scalaVersion  := "2.12.15"
 scalacOptions := Seq("-deprecation", "-unchecked", "-encoding", "utf8", "-Xlint")
 excludeFilter in unmanagedSources := (HiddenFileFilter || "*-script.scala")
 unmanagedResourceDirectories in Compile += baseDirectory.value / "conf"
@@ -14,9 +15,29 @@ fork := true
 // Must run Spark tests sequentially because they compete for port 4040!
 parallelExecution in Test := false
 
-val sparkVersion        = "2.3.0"
-val scalaTestVersion    = "3.0.5"
-val scalaCheckVersion   = "1.13.4"
+// MIGRATION: Added JVM options for Java 17 compatibility with Spark 3.0
+javaOptions ++= Seq(
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.net=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+  "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+  "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+  "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
+)
+
+// MIGRATION: Updated Spark version from 2.3.0 to 3.0.3 (latest stable 3.0.x)
+val sparkVersion        = "3.0.3"
+// MIGRATION: Updated test library versions for compatibility
+val scalaTestVersion    = "3.2.9"
+val scalaCheckVersion   = "1.15.4"
 
 libraryDependencies ++= Seq(
   "org.apache.spark"  %% "spark-core"      % sparkVersion,
